# ActixWeb-Crud

./: Cargo.toml
src/: main.rs
src/controller/: user_controller.rs
src/handlers/: user_handlers.rs
src/model/: common_fields.rs  mod.rs  user.rs
src/routes/: auth_routes.rs
src/service/: user_service.rs
